package uce.proyect.exceptions;

public class NoEncontradorException extends RuntimeException {
    public NoEncontradorException(String message) {
        super(message);
    }

}
