package uce.proyect.util;

public class ConservarRoles {
    public static String ROLE_MAXIMO = "ROLE_ADMIN";
}
